--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">www.medellin.gov.co</domain>
-        <domain includeSubdomains="true">127.0.0.1</domain>
-        <domain includeSubdomains="true">10.2.0.111</domain>
-        <domain includeSubdomains="true">localhost</domain>
-    </domain-config>
+<base-config cleartextTrafficPermitted="true">
+    <trust-anchors>
+        <certificates src="system" />
+    </trust-anchors>
+</base-config>
+<domain-config cleartextTrafficPermitted="true">
+    <domain includeSubdomains="true">www.medellin.gov.co</domain>
+</domain-config>
+<domain-config cleartextTrafficPermitted="true">
+    <domain includeSubdomains="true">https://www.medellin.gov.co/</domain>
+</domain-config>
 </network-security-config>
